change api dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,26 +1,19 @@
-# Étape 1 : Build Symfony avec Composer
-FROM composer:2.7 AS builder
+FROM php:8.4-cli-alpine
 
-WORKDIR /app
-COPY composer.json composer.lock ./
-RUN composer install --no-dev --optimize-autoloader --no-interaction
+RUN apk add --no-cache \
+  bash curl unzip git openssh-client \
+  icu-dev oniguruma-dev libzip-dev zlib-dev \
+  && docker-php-ext-install intl pdo_mysql zip
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+WORKDIR /var/www/html
+
+# Copie TOUT le projet (y compris bin/console)
 COPY . .
 
-# Étape 2 : Runtime PHP (léger et rapide)
-FROM php:8.2-cli
-
-WORKDIR /app
-COPY --from=builder /app /app
-
-# Installer extensions PHP nécessaires à Symfony
-RUN apt-get update && apt-get install -y \
-  libicu-dev libzip-dev zip unzip git \
-  && docker-php-ext-install intl pdo_mysql opcache zip
-
-# Crée un utilisateur non-root
-RUN useradd -ms /bin/bash symfony
-USER symfony
+# Ensuite seulement, installer les dépendances
+# RUN composer install --no-dev --optimize-autoloader --no-interaction
 
 EXPOSE 8000
-
 CMD ["php", "-S", "0.0.0.0:8000", "-t", "public"]
