--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,6 +40,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: ./api
+          file: ./api/Dockerfile
           push: true
           tags: |
             ${{ env.IMAGE_API }}:${{ env.IMAGE_TAG }}
