--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,20 +4,32 @@ on:
   push:
     branches: ["master", "main"]
 
+permissions:
+  contents: read
+  packages: write
+
 env:
-  REGISTRY: ghcr.io
-  IMAGE_FRONT: ghcr.io/${{ github.repository }}-front
-  IMAGE_API: ghcr.io/${{ github.repository }}-api
-  IMAGE_TAG: latest
+  IMAGE_FRONT: ghcr.io/simonbotte/musikk-front
+  IMAGE_API: ghcr.io/simonbotte/musikk-api
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      # 1) Checkout code musikk
+      - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2) Checkout infra repo
+      - name: Checkout infra
+        uses: actions/checkout@v4
+        with:
+          repository: simonbotte/musikk-infra
+          path: infra
+          token: ${{ secrets.GH_PAT }}
+
+      # 3) Login GHCR
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -25,49 +37,47 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Build & push FRONT
+      # 4) Build + Push FRONT
       - name: Build & Push Front
         uses: docker/build-push-action@v6
         with:
           context: ./front
+          file: infra/Dockerfile.front.prod
           push: true
           tags: |
-            ${{ env.IMAGE_FRONT }}:${{ env.IMAGE_TAG }}
+            ${{ env.IMAGE_FRONT }}:latest
             ${{ env.IMAGE_FRONT }}:${{ github.sha }}
 
-      # Build & push API
+      # 5) Build + Push API
       - name: Build & Push API
         uses: docker/build-push-action@v6
         with:
           context: ./api
-          file: ./api/Dockerfile
+          file: infra/Dockerfile.api.prod
           push: true
           tags: |
-            ${{ env.IMAGE_API }}:${{ env.IMAGE_TAG }}
+            ${{ env.IMAGE_API }}:latest
             ${{ env.IMAGE_API }}:${{ github.sha }}
 
-      # Deploy via SSH (synchro fichiers + compose up)
-      - name: Copy deploy files
+      # 6) Copier le dossier d’infra complet sur le VPS
+      - name: Upload infra to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "deploy/*"
-          target: "~/musikk-deploy"
+          source: "infra/."
+          target: "~/musikk-infra"
 
-      - name: Compose pull & up
+      # 7) Déployer via SSH
+      - name: Deploy on VPS
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd ~/musikk-deploy
-            export GH_OWNER=${{ github.repository_owner }}
-            export GH_REPO=${{ github.event.repository.name }}
-            export IMAGE_TAG=latest
-            # .env.prod doit déjà exister côté VPS (ou crée-le ici depuis secrets)
+            cd ~/musikk-infra
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml up -d --remove-orphans
             docker system prune -f
