--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,61 +1,29 @@
 services:
-  traefik:
-    image: traefik:v3.4
-    command:
-      # API Traefik (à désactiver en prod ou sécuriser)
-      - --api.insecure=true
-
-      # Docker provider
-      - --providers.docker=true
-      - --providers.file.filename=/certs/traefik-tls.yml
-      # - --providers.docker.exposedbydefault=false
-
-      # Entrypoints HTTP & HTTPS
-      - --entrypoints.web.address=:80
-      - --entrypoints.web.http.redirections.entryPoint.to=websecure
-      - --entrypoints.web.http.redirections.entryPoint.scheme=https
-      - --entrypoints.web.http.redirections.entryPoint.permanent=true
-      - --entrypoints.websecure.address=:443
-
-      # ACME (Let's Encrypt)
-      # - --certificatesresolvers.le.acme.email=simon.botte@icloud.com
-      # - --certificatesresolvers.le.acme.storage=/letsencrypt/acme.json
-      # - --certificatesresolvers.le.acme.tlschallenge=true
+  nginx:
+    image: nginx:alpine
+    container_name: musikk_nginx
     ports:
       - "80:80"
       - "443:443"
-      - "8080:8080"  # Dashboard
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./letsencrypt:/letsencrypt
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./certs:/certs:ro
+    depends_on:
+      - front
+      - api
+      - phpmyadmin
     networks:
-      web:
-        aliases:
-          - musikk.localhost
+      - web
 
   front:
     container_name: musikk_front
     build:
       context: ../front
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.front.rule=Host(`musikk.localhost`)"
-      - "traefik.http.services.front.loadbalancer.server.port=3000"
-      - "traefik.http.routers.front.entrypoints=websecure"
-      - "traefik.http.routers.front.tls=true"
     volumes:
       - ../front:/app
       - front_node_modules:/app/node_modules
-      - ./certs/rootCA.pem:/usr/local/share/ca-certificates/rootCA.pem:ro
-    environment:
-      NODE_EXTRA_CA_CERTS: /usr/local/share/ca-certificates/rootCA.pem
     working_dir: /app
-    command: yarn dev --host
-    extra_hosts:
-      - "musikk.localhost:host-gateway"
-      - "api.musikk.localhost:host-gateway"
-      - "host.docker.internal:host-gateway"
+    command: yarn dev --host 0.0.0.0
     networks:
       - web
 
@@ -63,19 +31,7 @@ services:
     container_name: musikk_api
     build:
       context: ../api
-      dockerfile: Dockerfile.dev
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`api.musikk.localhost`)"
-      - "traefik.http.routers.api.entrypoints=websecure"
-      - "traefik.http.routers.api.tls=true"
-      - "traefik.http.services.api.loadbalancer.server.port=8000"
-      # Middlewares
-      - "traefik.http.routers.api.middlewares=api-cors@docker"
-      - "traefik.http.middlewares.api-cors.headers.accesscontrolalloworiginlist=https://musikk.localhost"
-      - "traefik.http.middlewares.api-cors.headers.accesscontrolallowmethods=GET,POST,PUT,DELETE,OPTIONS"
-      - "traefik.http.middlewares.api-cors.headers.accesscontrolallowheaders=Content-Type,Authorization"
-      - "traefik.http.middlewares.api-cors.headers.accesscontrolallowcredentials=true"
+      dockerfile: Dockerfile
     volumes:
       - ../api:/var/www/html
     working_dir: /var/www/html
@@ -93,12 +49,6 @@ services:
     image: arm64v8/phpmyadmin
     depends_on:
       - db
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.pma.rule=Host(`db.localhost`)"
-      - "traefik.http.routers.pma.entrypoints=websecure"
-      - "traefik.http.routers.pma.tls=true"
-      - "traefik.http.services.pma.loadbalancer.server.port=80"
     environment:
       PMA_HOST: db
       PMA_USER: root
